Updated Dockerfile to required xml module